pos_ctrl/third_party/leadshine/LTDMC.h

typedef unsigned long       DWORD;
typedef unsigned short      WORD;
typedef unsigned int   uint32;                  /* defined for unsigned 32-bits integer variable 	无符号32位整型变量 */
//设置和读取打印模式
DMC_API short __stdcall dmc_set_debug_mode(WORD mode,const char* pFileName);
DMC_API short __stdcall dmc_get_debug_mode(WORD* mode,char* pFileName);
DMC_API short __stdcall dmc_board_init(void); 	//初始化控制卡
DMC_API short __stdcall dmc_board_init_onecard(WORD CardNo); 	////客户定制独立开卡 初始化一张控制卡
DMC_API short __stdcall dmc_board_close_onecard(WORD CardNo); 	////客户定制独立关卡 关闭一个控制卡
DMC_API short __stdcall	dmc_get_CardInfList(WORD* CardNum,DWORD* CardTypeList,WORD* CardIdList);//读取控制卡信息列表
DMC_API short __stdcall dmc_board_close(void);	//关闭控制卡
DMC_API short __stdcall dmc_board_reset(void);   //硬件复位
DMC_API short __stdcall dmc_board_reset_onecard(WORD CardNo);//客户定制单独硬件复位
DMC_API short __stdcall dmc_soft_reset(WORD CardNo);//控制卡软复位（pci卡） 热复位（总线卡）
DMC_API short __stdcall dmc_cool_reset(WORD CardNo);//控制卡冷复位
DMC_API short __stdcall dmc_original_reset(WORD CardNo);//控制卡初始复位
DMC_API short __stdcall dmc_get_card_ID (WORD CardNo,DWORD *CardID);	//读取控制卡卡号
DMC_API short __stdcall dmc_get_release_version(WORD CardNo,char *ReleaseVersion);//读取发布版本号
DMC_API short __stdcall dmc_get_card_version(WORD CardNo,DWORD *CardVersion);	//读取控制卡硬件版本
DMC_API short __stdcall dmc_get_card_soft_version(WORD CardNo,DWORD *FirmID,DWORD *SubFirmID);	//读取控制卡硬件的固件版本
DMC_API short __stdcall dmc_get_card_lib_version(DWORD *LibVer);	//读取控制卡动态库版本
DMC_API short __stdcall dmc_get_total_axes(WORD CardNo,DWORD *TotalAxis); 	//读取指定卡轴数
DMC_API short __stdcall dmc_get_total_liners(WORD CardNo,DWORD *TotalLiner); //读取指定卡插补坐标系数
DMC_API short __stdcall dmc_get_total_ionum(WORD CardNo,WORD *TotalIn,WORD *TotalOut);//获取本地IO点数
DMC_API short __stdcall dmc_get_total_adcnum(WORD CardNo,WORD* TotalIn,WORD* TotalOut);//获取本地ADDA输入输出数
//密码函数
DMC_API short __stdcall dmc_check_sn(WORD CardNo, const char * str_sn);
DMC_API short __stdcall dmc_write_sn(WORD CardNo, const char * str_sn);
/***********轴参数*************/
//脉冲模式		
DMC_API short __stdcall dmc_set_pulse_outmode(WORD CardNo,WORD axis,WORD outmode);
	
DMC_API short __stdcall dmc_get_pulse_outmode(WORD CardNo,WORD axis,WORD* outmode);
	
//脉冲当量
DMC_API short __stdcall dmc_set_equiv(WORD CardNo,WORD axis, double equiv);
DMC_API short __stdcall dmc_get_equiv(WORD CardNo,WORD axis, double *equiv);
//反向间隙(当量)
DMC_API short __stdcall dmc_set_backlash_unit(WORD CardNo,WORD axis,double backlash);
DMC_API short __stdcall dmc_get_backlash_unit(WORD CardNo,WORD axis,double *backlash);
//反向间隙(脉冲)
DMC_API short __stdcall dmc_set_backlash(WORD CardNo,WORD axis,long backlash);
DMC_API short __stdcall dmc_get_backlash(WORD CardNo,WORD axis,long *backlash);
//加速度接口
DMC_API short __stdcall dmc_set_profile_unit_acc(WORD CardNo,WORD axis,double Min_Vel,double Max_Vel,double Tacc,double Tdec,double Stop_Vel);
DMC_API short __stdcall dmc_get_profile_unit_acc(WORD CardNo,WORD axis,double* Min_Vel,double* Max_Vel,double* Tacc,double* Tdec,double* Stop_Vel);
/***********************************文件操作**************************************/
/*********************************************************************************************************
文件操作添加 总线卡
filetype
0-basic
1-gcode
2-setting
3-firewave
4-CAN configfile
100-trace data
*********************************************************************************************************/
DMC_API short __stdcall dmc_download_file(WORD CardNo, const char* pfilename, const char* pfilenameinControl,WORD filetype);
//下载内存文件 总线卡
DMC_API short __stdcall dmc_download_memfile(WORD CardNo, const char* pbuffer, uint32 buffsize, const char* pfilenameinControl,WORD filetype);
//上传文件
DMC_API short __stdcall dmc_upload_file(WORD CardNo, const char* pfilename, const char* pfilenameinControl, WORD filetype);
//上传内存文件
DMC_API short __stdcall dmc_upload_memfile(WORD CardNo, char* pbuffer, uint32 buffsize, const char* pfilenameinControl, uint32* puifilesize,WORD filetype);
//下载参数文件
DMC_API short __stdcall dmc_download_configfile(WORD CardNo,const char *FileName);
//下载固件文件
DMC_API short __stdcall dmc_download_firmware(WORD CardNo,const char *FileName);
//文件进度
DMC_API short __stdcall dmc_get_progress(WORD CardNo,float* process);
//安全参数
DMC_API short __stdcall dmc_set_softlimit(WORD CardNo,WORD axis,WORD enable, WORD source_sel,WORD SL_action, long N_limit,long P_limit);//设置软限位参数
DMC_API short __stdcall dmc_get_softlimit(WORD CardNo,WORD axis,WORD *enable, WORD *source_sel,WORD *SL_action,long *N_limit,long *P_limit);//读取软限位参数
DMC_API short __stdcall dmc_set_el_mode(WORD CardNo,WORD axis,WORD enable,WORD el_logic,WORD el_mode);//设置EL信号
DMC_API short __stdcall dmc_get_el_mode(WORD CardNo,WORD axis,WORD *enable,WORD *el_logic,WORD *el_mode);//读取设置EL信号
DMC_API short __stdcall dmc_set_emg_mode(WORD CardNo,WORD axis,WORD enable,WORD emg_logic);//设置EMG信号
DMC_API short __stdcall dmc_get_emg_mode(WORD CardNo,WORD axis,WORD *enable,WORD *emg_logic);//读取设置EMG信号
/*************************************单轴运动*****************************************/
//速度设置		
DMC_API short __stdcall dmc_set_profile(WORD CardNo,WORD axis,double Min_Vel,double Max_Vel,double Tacc,double Tdec,double stop_vel);//设定速度曲线参数
DMC_API short __stdcall dmc_get_profile(WORD CardNo,WORD axis,double *Min_Vel,double *Max_Vel,double *Tacc,double *Tdec,double *stop_vel);//读取速度曲线参数
//速度设置(脉冲当量)
DMC_API short __stdcall dmc_set_profile_unit(WORD CardNo,WORD axis,double Min_Vel,double Max_Vel,double Tacc,double Tdec,double Stop_Vel);
DMC_API short __stdcall dmc_get_profile_unit(WORD CardNo,WORD axis,double* Min_Vel,double* Max_Vel,double* Tacc,double* Tdec,double* Stop_Vel);
//速度曲线设置，加速度值表示(脉冲)
DMC_API short __stdcall dmc_set_acc_profile(WORD CardNo,WORD axis,double Min_Vel,double Max_Vel,double Acc,double Dec,double stop_vel);//设定速度曲线参数
DMC_API short __stdcall dmc_get_acc_profile(WORD CardNo,WORD axis,double *Min_Vel,double *Max_Vel,double *Acc,double *Dec,double *stop_vel);//读取速度曲线参数
//速度曲线设置，加速度值表示(当量)
DMC_API short __stdcall dmc_set_profile_unit_acc(WORD CardNo,WORD axis,double Min_Vel,double Max_Vel,double Tacc,double Tdec,double Stop_Vel);
DMC_API short __stdcall dmc_get_profile_unit_acc(WORD CardNo,WORD axis,double* Min_Vel,double* Max_Vel,double* Tacc,double* Tdec,double* Stop_Vel);
DMC_API short __stdcall dmc_set_s_profile(WORD CardNo,WORD axis,WORD s_mode,double s_para);//设置平滑速度曲线参数
DMC_API short __stdcall dmc_get_s_profile(WORD CardNo,WORD axis,WORD s_mode,double *s_para);//读取平滑速度曲线参数 兼容DMC5800 s_mode改用指针返回参数值
//点位运动(脉冲)		
DMC_API short __stdcall dmc_pmove(WORD CardNo,WORD axis,long dist,WORD posi_mode);//指定轴做定长位移运动
//点位运动(当量)
DMC_API short __stdcall dmc_pmove_unit(WORD CardNo,WORD axis,double Dist,WORD posi_mode);
//单轴连续速度运动		
DMC_API short __stdcall dmc_vmove(WORD CardNo,WORD axis,WORD dir);
//指定轴做定长位移运动 同时发送速度和S时间(脉冲)
DMC_API short __stdcall dmc_pmove_extern(WORD CardNo, WORD axis, double dist,double Min_Vel, double Max_Vel, double Tacc, double Tdec, double stop_Vel, double s_para, WORD posi_mode);
//在线变位/变速(脉冲)
DMC_API short __stdcall dmc_reset_target_position(WORD CardNo,WORD axis,long dist,WORD posi_mode);//运动中改变目标位置
DMC_API short __stdcall dmc_change_speed(WORD CardNo,WORD axis,double Curr_Vel,double Taccdec);//在线改变指定轴的当前运动速度
DMC_API short __stdcall dmc_update_target_position(WORD CardNo,WORD axis,long dist,WORD posi_mode);//无论运动与否强行改变目标位置
//变速变位(当量)
DMC_API short __stdcall dmc_reset_target_position_unit(WORD CardNo,WORD axis, double New_Pos);
DMC_API short __stdcall dmc_change_speed_unit(WORD CardNo,WORD axis, double New_Vel,double Taccdec);
DMC_API short __stdcall dmc_update_target_position_unit(WORD CardNo,WORD axis, double New_Pos);